アイディア

--- a/2017_0119/HelloCanvas.html
+++ b/2017_0119/HelloCanvas.html
@@ -49,7 +49,8 @@
 	//É“
 	ctx.beginPath();
 	ctx.fillStyle = "#555555";
-	ctx.arc(225, 250, 40, 0, Math.PI*2, false);
+	ctx.arc(225, 250, 40, 0, Math.P
+		I*2, false);
 	ctx.fill();
 	ctx.beginPath();
 	ctx.arc(225, 250, 40, 0, Math.PI*2, false);
